# k8s-crawler

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: base.py  crawler.py  extensions.py  k8s.py  main.py  models.py  pyproject.toml  state.py
backend/extensions/: __init__.py  relationships.py  resources.py
frontend/: package.json  pnpm-lock.yaml
frontend/public/: index.html
frontend/src/: App.js  Graph.jsx
public/: package.json
public/src/: App.js  Graph.jsx
